basic css of slot page layout done, tweaked html to fit css.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
     <h1>Leaf Village Slot Machine</h1>
-    <div id="lanes">
-        <div class="lane" id ="lane1">
-            <img src="" alt="">
+    <div id="container">
+        <div id="lanes">
+            <div class="lane" id="lane1">
+                <img src="" alt="">
+            </div>
+            <div class="lane" id="lane2">
+                 <img src="" alt="">
+            </div>
+            <div class="lane" id="lane3">
+                <img src="" alt="">
+            </div>
         </div>
-        <div class="lane" id="lane2">
-             <img src="" alt="">
+        <div id="buttons">
+            <button id="spinButton" onclick="spinLane()">Spin</button>
+            <button id="betButton" onclick="placeBet()">Bet</button>
         </div>
-        <div class="lane" id="lane3">
-            <img src="" alt="">
     </div>
-    <button id="spinButton" onclick="spinLane()">Spin</button>
-    <button id="betButton" onclick="placeBet()">Bet</button>
-</div>
 </body>
-</html
+</html>
