--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div id="container">
         <div id="lanes">
             <div class="lane" id="lane1">
-                <img src="" alt="">
+                <img src="" alt="" class="image-symbol">
             </div>
             <div class="lane" id="lane2">
-                 <img src="" alt="">
+                 <img src="" alt="" class="image-symbol">
             </div>
             <div class="lane" id="lane3">
-                <img src="" alt="">
+                <img src="" alt="" class="image-symbol">
             </div>
         </div>
         <div id="buttons">
