ignore last push

--- a/index.html
+++ b/index.html
@@ -20,18 +20,9 @@
             <div class="lane" id="lane3">
                 <img src="" alt="" class="image-symbol">
             </div>
-            <div class="lane" id="lane4">
-                <img src="" alt="" class="image-symbol">
-            </div>
-            <div class="lane" id="lane5">
-                <img src="" alt="" class="image-symbol">
-            </div>
-            <div class="lane" id="lane6">
-                <img src="" alt="" class="image-symbol">
-            </div>
-            <div class="lane" id="lane7">
-                <img src="" alt="" class="image-symbol">
-            </div>
+            <div id="jackpotMessage"> 
+                Jackpot: $<span id="jackpotAmount">500,000</span>
+                </div>
         </div>
         <div id="buttons">
             <button id="spinButton" onclick="spinLane()">Spin</button>
