--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <div id="container">
         <div id="lanes">
             <div class="lane" id="lane1">
-                <img src="" alt="" class="image-symbol">
+                <img src="img/HD-wallpaper-naruto-kurama-kurama-mode-sage-of-six-path-naruto-uzumaki-nine-tails.jpg" alt="" class="image-symbol">
             </div>
             <div class="lane" id="lane2">
-                 <img src="" alt="" class="image-symbol">
+                 <img src="img/905c30ea029866b949b240ede035cb5989ae2474r1-1368-2048v2_uhq.jpg" alt="" class="image-symbol">
             </div>
             <div class="lane" id="lane3">
-                <img src="" alt="" class="image-symbol">
+                <img src="img/16832317_229802720815603_6959446976233233315_n.jpg" alt="" class="image-symbol">
             </div>
             <div id="jackpotMessage"> 
                 Jackpot: $<span id="jackpotAmount">500,000</span>
                 </div>
         </div>
         <div id="buttons">
-            <button id="spinButton" onclick="spinLane()">Spin</button>
-            <button id="betButton" onclick="placeBet()">Bet</button>
+            <button id="spinButton">Spin</button>
+            <button id="betButton">Bet</button>
         </div>
     </div>
 </body>
