got lanes working properly in order to finish game functions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <h1>Leaf Village Slot Machine</h1>
+    <input type="number" id="wager">
+    <p id="balance">Balance: $100000</p>
+
+    <h1>Leaf Village Slots</h1>
     <div id="container">
         <div id="lanes">
             <div class="lane" id="lane1">
