Added jackpot symbol and working threw jackpot conditions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <input type="number" id="wager">
     <p id="balance">Balance: $100000</p>
+   
+    
 
     <h1>Leaf Village Slots</h1>
     <div id="container">
@@ -24,12 +26,13 @@
                 <img src="img/16832317_229802720815603_6959446976233233315_n.jpg" alt="" class="image-symbol">
             </div>
             <div id="jackpotMessage"> 
-                Jackpot: $<span id="jackpotAmount">500,000</span>
+               <p> Jackpot: $<span id="jackpotAmount">500,000</span></p>
+               <img src="img/513216.webp" alt="Jackpot Symbol" id="jackpotSymbol">
                 </div>
         </div>
         <div id="buttons">
             <button id="spinButton">Spin</button>
-            <button id="betButton">Bet</button>
+            
         </div>
     </div>
 </body>
