jackpot works correctly no errors :)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input type="number" id="wager">
-    <p id="balance">Balance: $100000</p>
+    <span id="balance">Balance: $100000</span>
    
     
 
